--- a/client/src/app/shared/footer/footer.component.html
+++ b/client/src/app/shared/footer/footer.component.html
@@ -3,7 +3,7 @@
     <div class="row align-items-center">
       <div class="col-xs-12 col-md-8 col-lg-6">
         <div class="d-flex flex-column flex-sm-row justify-content-center justify-content-sm-start align-items-sm-center">
-          <a class="footer-logo d-block d-sm-inline-block mr-sm-2" href="http://www.pb.com"></a>
+          <a class="footer-logo d-block d-sm-inline-block text-center text-sm-left mr-sm-2" href="http://www.pb.com"></a>
           <span class="d-block d-sm-inline-block text-center text-sm-left pt-1 pb-3 p-sm-0">&copy; {{date}} Pitney Bowes Inc.</span>
         </div>
       </div>
