--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -3,3 +3,5 @@
 <router-outlet class="site-content"></router-outlet>
 
 <router-outlet name="footer"></router-outlet>
+
+<ngx-loading-bar color="#009bdf"></ngx-loading-bar>
