beta 10 and accessibility updates

--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid" role="main">
   <div class="row">
     <div class="col">
       <h1>Home</h1>
