--- a/client/src/app/shared/header/header.component.html
+++ b/client/src/app/shared/header/header.component.html
@@ -1,4 +1,4 @@
-<header class="bg-brand-header fixed-top" appHeaderShadow>
+<header class="bg-brand-header fixed-top">
 
   <div class="container-fluid">
     <div class="row">
