--- a/client/src/app/shared/header/header.component.html
+++ b/client/src/app/shared/header/header.component.html
@@ -9,7 +9,7 @@
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <a class="navbar-brand" href="" routerLink="/home">
+          <a class="navbar-brand" routerLink="/home">
             Product Name
           </a>
 
@@ -48,9 +48,11 @@
 
               <li class="nav-item">
                 <!-- when search icon is clicked, search UI is displayed and the other menus are hidden -->
-                <a class="nav-link" aria-label="Search" (click)="toggleSearch()">
-                  <i class="pbi-icon-outline pbi-search d-none d-lg-inline"></i>
+                <a #searchLink class="nav-link d-none d-sm-block" aria-label="Search" href="" (click)="toggleSearch($event)">
+                  <i class="pbi-icon-outline pbi-search d-none d-lg-inline" aria-hidden="true"></i>
+                </a>
 
+                <div class="nav-link d-sm-none">
                   <div class="form-group d-lg-none">
                     <div class="input-group input-group-sm">
                       <label for="search-input-xs" class="sr-only">Search</label>
@@ -62,8 +64,7 @@
                       <input id="search-input-xs" class="form-control" type="search" placeholder="Search">
                     </div>
                   </div>
-                </a>
-
+                </div>
 
               </li>
 
@@ -71,17 +72,18 @@
               <li class="nav-item dropdown">
                 <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-labelledby="app-offscreen"
                   aria-haspopup="true" aria-expanded="false">
-                  <i class="pbi-icon-outline pbi-apps d-none d-lg-inline"></i>
+                  <i class="pbi-icon-outline pbi-apps d-none d-lg-inline" aria-hidden="true"></i>
 
                   <span class="d-lg-none" id="app-offscreen">
-                    <i class="pbi-icon-mini pbi-apps"></i>&nbsp;Applications
+                    <i class="pbi-icon-mini pbi-grid-4" aria-hidden="true"></i>&nbsp;Applications
                   </span>
                 </a>
                 <div class="dropdown-menu" role="menu">
+                  <div class="section-head hidden-xs">Your Apps</div>
                   <a class="dropdown-item" href="">App 1</a>
                   <a class="dropdown-item" href="">App 2</a>
                   <a class="dropdown-item" href="">App 3</a>
-                  <a class="dropdown-item" href="">App 4</a>
+                  <a class="dropdown-item disabled" aria-disabled="true" href="">App 4</a>
                 </div>
               </li>
 
@@ -89,30 +91,32 @@
               <li class="nav-item dropdown menu-help">
                 <a href="" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-labelledby="help-offscreen"
                   aria-expanded="false" aria-haspopup="true">
-                  <i class="pbi-icon-outline pbi-help-circle d-none d-lg-inline"></i>
+                  <i class="pbi-icon-outline pbi-help-circle d-none d-lg-inline" aria-hidden="true"></i>
 
                   <span class="d-lg-none" id="help-offscreen">
-                    <i class="pbi-icon-mini pbi-help-circle"></i>&nbsp;Support
+                    <i class="pbi-icon-mini pbi-help-circle" aria-hidden="true"></i>&nbsp;Support
                   </span>
                 </a>
 
                 <div class="dropdown-menu" role="menu">
-                  <!-- <li class="section-head hidden-xs">Support</li> -->
-                  <!-- <input type="text" name="" id="" class="form-control" placeholder="Search"> -->
+                  <div class="section-head hidden-xs">Support</div>
+                  <input type="text" class="form-control form-control-sm dropdown-search-item" placeholder="Search"
+                    aria-label="Search">
                   <a class="dropdown-item" href="">Support Topic 1</a>
                   <a class="dropdown-item" href="">Support Topic 2</a>
                   <a class="dropdown-item" href="">See All Support Topics</a>
+                  <div class="divider" role="separator"></div>
                   <a class="dropdown-item" href="">
-                    <i class="pbi-icon-mini pbi-chat-conversation"></i> Chat
+                    <i class="pbi-icon-mini pbi-chat-conversation" aria-hidden="true"></i> Chat
                     <span ng-if="patterns.offline">Offline</span>
                   </a>
                   <a class="dropdown-item" href="">
-                    <i class="pbi-icon-mini pbi-mail"></i> Email</a>
+                    <i class="pbi-icon-mini pbi-mail" aria-hidden="true"></i> Email</a>
                   <a class="dropdown-item" href="tel:1-800-555-45678">
-                    <i class="pbi-icon-mini pbi-phone"></i> 1-800-555-45678</a>
+                    <i class="pbi-icon-mini pbi-phone" aria-hidden="true"></i> 1-800-555-45678</a>
+                  <div class="divider" role="separator"></div>
                   <a class="dropdown-item" href="">
-                    <i class="pbi-icon-mini pbi-download"></i> Printer/Scale Drivers</a>
-
+                    <i class="pbi-icon-mini pbi-download" aria-hidden="true"></i> Printer/Scale Drivers</a>
                 </div>
               </li>
 
@@ -121,18 +125,21 @@
               <li class="nav-item dropdown">
                 <a href="" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-labelledby="settings-offscreen"
                   aria-expanded="false" aria-haspopup="true">
-                  <i class="pbi-icon-outline pbi-settings d-none d-lg-inline"></i>
+                  <i class="pbi-icon-outline pbi-settings d-none d-lg-inline" aria-hidden="true"></i>
 
                   <span class="d-lg-none" id="settings-offscreen">
-                    <i class="pbi-icon-mini pbi-settings"></i>&nbsp;Settings
+                    <i class="pbi-icon-mini pbi-settings" aria-hidden="true"></i>&nbsp;Settings
                   </span>
                 </a>
                 <div class="dropdown-menu" role="menu">
-                  <!-- <div class="section-head">Application Settings</div> -->
+                  <div class="section-head">Application Settings</div>
                   <a class="dropdown-item" href="">Carriers</a>
                   <a class="dropdown-item" href="">Cost Accounts</a>
                   <a class="dropdown-item" href="">Postage Payment Methods</a>
                   <a class="dropdown-item" href="">Users</a>
+                  <div class="section-head hidden-xs">Personal Preferences
+                  </div>
+
                   <a class="dropdown-item" href="">Label Options</a>
                   <a class="dropdown-item" href="">Automatic Emails</a>
                   <a class="dropdown-item" href="">Presets</a>
@@ -148,36 +155,31 @@
 
                   <div class="d-none d-lg-block header-user-lockup">
                     <div class="header-username">Melanie Daniels</div>
-                    <!-- <div class="header-notification">3</div> -->
                   </div>
 
                   <span class="d-lg-none" id="username-offscreen">
-                    <i class="pbi-icon-mini pbi-user"></i>&nbsp;Melanie Daniels
+                    <i class="pbi-icon-mini pbi-user-circle" aria-hidden="true"></i>&nbsp;Melanie Daniels
                   </span>
                 </a>
 
                 <div class="dropdown-menu" role="menu">
-                  <a class="dropdown-item" href="">Email, Passwords</a>
-                  <a class="dropdown-item" href="">Financials, Usage, Products, Support</a>
+                  <a class="dropdown-item" href="">Profile <br><span class="menu-text-small">Email, Passwords</span></a>
+                  <a class="dropdown-item" href="">Your Account <br><span class="menu-text-small">Financials, Usage,
+                      Products, Support</span></a>
+                  <div class="divider" role="separator"></div>
                   <a class="dropdown-item" href="">Sign Out</a>
                 </div>
               </li>
-
-
             </ul>
 
             <!-- new search, appears when icon in right menus (above) is clicked -->
-            <div class="header-search" [ngClass]="{'search-active': searchActive}">
+            <div class="header-search d-none d-sm-block" [ngClass]="{'search-active': searchActive}">
               <form class="search-ui">
-                <div>
-                  <label for="search-input" class="sr-only">Search</label>
-                  <input id="search-input" class="form-control search ng-pristine ng-empty ng-invalid ng-invalid-required ng-touched"
-                    type="text" required="">
+                <input #searchInput id="search-input" class="form-control search" type="text" required="" aria-label="Search">
 
-                  <button class="btn btn-link search-clear" type="reset" (click)="toggleSearch()" aria-label="clear search">
-                    <i class="pbi-icon-mini pbi-delete-circle"></i>
-                  </button>
-                </div>
+                <button class="search-clear border-0" type="reset" (click)="toggleSearch($event)" aria-label="clear search">
+                  <i class="pbi-icon-mini pbi-close" aria-hidden="true"></i>
+                </button>
               </form>
             </div>
 
