--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,7 +1,7 @@
-<div class="container-fluid" role="main">
-  <div class="row">
-    <div class="col">
-      <h1>Home</h1>
+<div class="page-header">
+  <div class="container">
+    <div class="row">
+      <div class="col"><h1>Home</h1></div>
     </div>
   </div>
 </div>
