--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,7 +1,20 @@
 <div class="page-header">
   <div class="container">
     <div class="row">
-      <div class="col"><h1>Home</h1></div>
+      <div class="col">
+        <h1>Home</h1>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!--  mt-7 class on container, unless the first element inside is an H2 -->
+<div class="container mt-7">
+  <div class="row">
+    <div class="col">
+      <!-- if you have an H2 as the first element, remove the mt-7 from the container -->
+      <!-- <h2>Rest of Your Content</h2> -->
+      <p>Etiam porta sem malesuada magna mollis euismod. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Maecenas faucibus mollis interdum. Nulla vitae elit libero, a pharetra augue. Sed posuere consectetur est at lobortis. Curabitur blandit tempus porttitor. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
     </div>
   </div>
 </div>
