--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -7,10 +7,50 @@
       <!-- if you have an H2 as the first element, remove the mt-7 from the container -->
       <!-- <h2>Rest of Your Content</h2> -->
       <p>
-        Etiam porta sem malesuada magna mollis euismod. Duis mollis, est non commodo luctus, nisi erat porttitor ligula,
-        eget lacinia odio sem nec elit. Maecenas faucibus mollis interdum. Nulla vitae elit libero, a pharetra augue.
-        Sed posuere consectetur est at lobortis. Curabitur blandit tempus porttitor. Lorem ipsum dolor sit amet,
-        consectetur adipiscing elit.
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae eaque adipisci, illo minus inventore
+        possimus amet non blanditiis, quibusdam perspiciatis sunt, veritatis ex a explicabo praesentium. Laudantium
+        dolorem tempore veritatis nulla aliquam perferendis voluptatum ducimus quis ipsa quo. Deleniti, et. Tempora
+        nihil incidunt voluptatum soluta delectus doloremque vero nesciunt pariatur, sit dicta obcaecati, harum quia
+        fugit? Porro iusto id molestiae ullam sed soluta laboriosam odio, ducimus, dolor delectus laudantium perferendis
+        consequuntur aperiam qui vero alias quisquam voluptate, harum impedit sit similique perspiciatis necessitatibus!
+        Voluptate aperiam consectetur perspiciatis laboriosam hic! Placeat alias necessitatibus laboriosam id, velit
+        possimus consectetur sequi obcaecati perferendis excepturi odio incidunt saepe quia officia minima! Pariatur vel
+        iste, eligendi dolor sint ullam porro veniam veritatis dignissimos. Quia quod est doloribus molestias, vel optio
+        vitae nulla soluta aliquam voluptatibus repudiandae quas eaque cupiditate perspiciatis tempora distinctio, nam
+        id. Rem distinctio amet molestiae quis, debitis accusantium autem, earum ut tempora voluptatem quo. Consequuntur
+        laborum tempora consequatur molestias maiores hic aspernatur, ipsum beatae quae quaerat, aliquid provident
+        ratione soluta accusamus voluptatem minima veniam illo voluptas porro mollitia. Ea accusantium doloremque autem
+        est quod labore tempora aperiam neque quibusdam quia, minima temporibus doloribus eius. Culpa ullam ad ea iure
+        asperiores aut consequatur amet enim at magnam. Perferendis id ab exercitationem obcaecati sint et quod ad iste
+        eveniet nemo? Impedit veritatis libero aliquam at nesciunt et necessitatibus alias illum error labore
+        consequatur sit inventore deleniti, praesentium quia minus magnam nihil sed quisquam eius. Expedita sed,
+        sapiente minus sint tempora fugit! Minima quisquam sapiente natus harum nesciunt autem nostrum doloribus commodi
+        corporis, facere omnis non vitae nulla eos praesentium tempora libero! Corrupti assumenda enim sed itaque dolore
+        esse praesentium atque maxime recusandae velit, molestiae non a quos blanditiis magni dicta mollitia odio
+        laboriosam ut culpa dolorum delectus voluptate? Sit eligendi suscipit sed! Odit, consectetur.
+      </p>
+      <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae eaque adipisci, illo minus inventore
+        possimus amet non blanditiis, quibusdam perspiciatis sunt, veritatis ex a explicabo praesentium. Laudantium
+        dolorem tempore veritatis nulla aliquam perferendis voluptatum ducimus quis ipsa quo. Deleniti, et. Tempora
+        nihil incidunt voluptatum soluta delectus doloremque vero nesciunt pariatur, sit dicta obcaecati, harum quia
+        fugit? Porro iusto id molestiae ullam sed soluta laboriosam odio, ducimus, dolor delectus laudantium perferendis
+        consequuntur aperiam qui vero alias quisquam voluptate, harum impedit sit similique perspiciatis necessitatibus!
+        Voluptate aperiam consectetur perspiciatis laboriosam hic! Placeat alias necessitatibus laboriosam id, velit
+        possimus consectetur sequi obcaecati perferendis excepturi odio incidunt saepe quia officia minima! Pariatur vel
+        iste, eligendi dolor sint ullam porro veniam veritatis dignissimos. Quia quod est doloribus molestias, vel optio
+        vitae nulla soluta aliquam voluptatibus repudiandae quas eaque cupiditate perspiciatis tempora distinctio, nam
+        id. Rem distinctio amet molestiae quis, debitis accusantium autem, earum ut tempora voluptatem quo. Consequuntur
+        laborum tempora consequatur molestias maiores hic aspernatur, ipsum beatae quae quaerat, aliquid provident
+        ratione soluta accusamus voluptatem minima veniam illo voluptas porro mollitia. Ea accusantium doloremque autem
+        est quod labore tempora aperiam neque quibusdam quia, minima temporibus doloribus eius. Culpa ullam ad ea iure
+        asperiores aut consequatur amet enim at magnam. Perferendis id ab exercitationem obcaecati sint et quod ad iste
+        eveniet nemo? Impedit veritatis libero aliquam at nesciunt et necessitatibus alias illum error labore
+        consequatur sit inventore deleniti, praesentium quia minus magnam nihil sed quisquam eius. Expedita sed,
+        sapiente minus sint tempora fugit! Minima quisquam sapiente natus harum nesciunt autem nostrum doloribus commodi
+        corporis, facere omnis non vitae nulla eos praesentium tempora libero! Corrupti assumenda enim sed itaque dolore
+        esse praesentium atque maxime recusandae velit, molestiae non a quos blanditiis magni dicta mollitia odio
+        laboriosam ut culpa dolorum delectus voluptate? Sit eligendi suscipit sed! Odit, consectetur.
       </p>
     </div>
   </div>
