--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,7 +1,11 @@
-<router-outlet name="header"></router-outlet>
+<div class="site-wrapper">
+  <div>
+    <router-outlet name="header"></router-outlet>
 
-<router-outlet class="site-content"></router-outlet>
+    <router-outlet class="site-content"></router-outlet>
+  </div>
 
-<router-outlet name="footer"></router-outlet>
+  <router-outlet name="footer"></router-outlet>
+</div>
 
 <ngx-loading-bar color="#009bdf"></ngx-loading-bar>
