fix bad page title attribute
Signed-off-by: Steve Lombardi <steve.lombardi@pb.com>

--- a/client/src/app/item1/item1.component.html
+++ b/client/src/app/item1/item1.component.html
@@ -1,4 +1,4 @@
-<pbds-page-title ttl="Item 1" container="container"></pbds-page-title>
+<pbds-page-title ttl="Item 1" layout="container"></pbds-page-title>
 <!--  mt-7 class on container, unless the first element inside is an H2 -->
 <div class="container">
   <div class="row">
