--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<pbds-page-title ttl="Home" container="container"></pbds-page-title>
+<pbds-page-title ttl="Home" layout="container"></pbds-page-title>
 
 <!--  mt-7 class on container, unless the first element inside is an H2 -->
 <div class="container mt-7">
