--- a/client/src/app/shared/header/header.component.html
+++ b/client/src/app/shared/header/header.component.html
@@ -3,15 +3,7 @@
     <div class="row">
       <div class="col">
         <nav class="navbar navbar-expand-lg navbar-light">
-          <button
-            class="navbar-toggler p-0"
-            type="button"
-            data-toggle="collapse"
-            data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
+          <button class="navbar-toggler p-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <a class="navbar-brand" routerLink="/home"> Product Name </a>
@@ -25,16 +17,7 @@
               </li>
 
               <li class="nav-item dropdown">
-                <a
-                  class="nav-link dropdown-toggle"
-                  href="#"
-                  id="navbarDropdownMenuLink"
-                  role="button"
-                  data-toggle="dropdown"
-                  aria-haspopup="true"
-                  aria-expanded="false"
-                  >Menu 1</a
-                >
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Menu 1</a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                   <a class="dropdown-item" routerLink="">Menu Item 1</a>
                   <a class="dropdown-item" routerLink="">Menu Item 2</a>
@@ -43,15 +26,7 @@
               </li>
 
               <li class="nav-item dropdown">
-                <a
-                  class="nav-link dropdown-toggle"
-                  href="#"
-                  role="button"
-                  data-toggle="dropdown"
-                  aria-haspopup="true"
-                  aria-expanded="false"
-                  >Menu 2</a
-                >
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Menu 2</a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                   <a class="dropdown-item" routerLink="">Menu Item 1</a>
                   <a class="dropdown-item" routerLink="">Menu Item 2</a>
@@ -63,13 +38,7 @@
             <ul class="navbar-nav navbar-right" [ngClass]="{ 'search-active': searchActive }">
               <li class="nav-item">
                 <!-- when search icon is clicked, search UI is displayed and the other menus are hidden -->
-                <a
-                  #searchLink
-                  class="nav-link d-none d-sm-block"
-                  aria-label="Search"
-                  href=""
-                  (click)="toggleSearch($event)"
-                >
+                <a #searchLink class="nav-link d-none d-sm-block" aria-label="Search" href="" (click)="toggleSearch($event)">
                   <i class="pbi-icon-outline pbi-search d-none d-lg-inline" aria-hidden="true"></i>
                 </a>
 
@@ -90,14 +59,7 @@
 
               <!-- Apps menu -->
               <li class="nav-item dropdown">
-                <a
-                  href="#"
-                  class="nav-link dropdown-toggle"
-                  data-toggle="dropdown"
-                  aria-labelledby="app-offscreen"
-                  aria-haspopup="true"
-                  aria-expanded="false"
-                >
+                <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" aria-labelledby="app-offscreen" aria-haspopup="true" aria-expanded="false">
                   <i class="pbi-icon-outline pbi-apps d-none d-lg-inline" aria-hidden="true"></i>
 
                   <span class="d-lg-none" id="app-offscreen">
@@ -115,14 +77,7 @@
 
               <!-- Support menu -->
               <li class="nav-item dropdown menu-help">
-                <a
-                  href=""
-                  class="nav-link dropdown-toggle"
-                  data-toggle="dropdown"
-                  aria-labelledby="help-offscreen"
-                  aria-expanded="false"
-                  aria-haspopup="true"
-                >
+                <a href="" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" aria-labelledby="help-offscreen" aria-expanded="false" aria-haspopup="true">
                   <i class="pbi-icon-outline pbi-help-circle d-none d-lg-inline" aria-hidden="true"></i>
 
                   <span class="d-lg-none" id="help-offscreen">
@@ -132,12 +87,7 @@
 
                 <div class="dropdown-menu" role="menu">
                   <div class="section-head hidden-xs">Support</div>
-                  <input
-                    type="text"
-                    class="form-control form-control-sm dropdown-search-item"
-                    placeholder="Search"
-                    aria-label="Search"
-                  />
+                  <input type="text" class="form-control form-control-sm dropdown-search-item" placeholder="Search" aria-label="Search" />
                   <a class="dropdown-item" href="">Support Topic 1</a>
                   <a class="dropdown-item" href="">Support Topic 2</a>
                   <a class="dropdown-item" href="">See All Support Topics</a>
@@ -148,25 +98,16 @@
                   </a>
                   <a class="dropdown-item" href=""> <i class="pbi-icon-mini pbi-mail" aria-hidden="true"></i> Email</a>
                   <a class="dropdown-item" href="tel:1-800-555-45678">
-                    <i class="pbi-icon-mini pbi-phone" aria-hidden="true"></i> 1-800-555-45678</a
-                  >
+                    <i class="pbi-icon-mini pbi-phone" aria-hidden="true"></i> 1-800-555-45678</a>
                   <div class="divider" role="separator"></div>
                   <a class="dropdown-item" href="">
-                    <i class="pbi-icon-mini pbi-download" aria-hidden="true"></i> Printer/Scale Drivers</a
-                  >
+                    <i class="pbi-icon-mini pbi-download" aria-hidden="true"></i> Printer/Scale Drivers</a>
                 </div>
               </li>
 
               <!-- settings menu -->
               <li class="nav-item dropdown">
-                <a
-                  href=""
-                  class="nav-link dropdown-toggle"
-                  data-toggle="dropdown"
-                  aria-labelledby="settings-offscreen"
-                  aria-expanded="false"
-                  aria-haspopup="true"
-                >
+                <a href="" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" aria-labelledby="settings-offscreen" aria-expanded="false" aria-haspopup="true">
                   <i class="pbi-icon-outline pbi-settings d-none d-lg-inline" aria-hidden="true"></i>
 
                   <span class="d-lg-none" id="settings-offscreen">
@@ -191,13 +132,7 @@
 
               <!-- User menu -->
               <li class="nav-item dropdown menu-user">
-                <a
-                  href=""
-                  class="nav-link dropdown-toggle"
-                  data-toggle="dropdown"
-                  aria-labelledby="username-offscreen"
-                  aria-expanded="false"
-                >
+                <a href="" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" aria-labelledby="username-offscreen" aria-expanded="false">
                   <div class="d-none d-lg-block header-user-lockup">
                     <div class="header-username">Melanie Daniels</div>
                   </div>
@@ -208,12 +143,8 @@
                 </a>
 
                 <div class="dropdown-menu" role="menu">
-                  <a class="dropdown-item" href=""
-                    >Profile <br /><span class="menu-text-small">Email, Passwords</span></a
-                  >
-                  <a class="dropdown-item" href=""
-                    >Your Account <br /><span class="menu-text-small">Financials, Usage, Products, Support</span></a
-                  >
+                  <a class="dropdown-item" href="">Profile <br /><span class="menu-text-small">Email, Passwords</span></a>
+                  <a class="dropdown-item" href="">Your Account <br /><span class="menu-text-small">Financials, Usage, Products, Support</span></a>
                   <div class="divider" role="separator"></div>
                   <a class="dropdown-item" href="">Sign Out</a>
                 </div>
@@ -223,21 +154,9 @@
             <!-- new search, appears when icon in right menus (above) is clicked -->
             <div class="header-search d-none d-sm-block" [ngClass]="{ 'search-active': searchActive }">
               <form class="search-ui">
-                <input
-                  #searchInput
-                  id="search-input"
-                  class="form-control search"
-                  type="text"
-                  required=""
-                  aria-label="Search"
-                />
+                <input #searchInput id="search-input" class="form-control search" type="text" required="" aria-label="Search" />
 
-                <button
-                  class="search-clear border-0"
-                  type="reset"
-                  (click)="toggleSearch($event)"
-                  aria-label="clear search"
-                >
+                <button class="search-clear border-0" type="reset" (click)="toggleSearch($event)" aria-label="clear search">
                   <i class="pbi-icon-mini pbi-close" aria-hidden="true"></i>
                 </button>
               </form>
